[gd_scene load_steps=19 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/PositionManager.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Components/Characters/CursorManager.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Components/Characters/ControlScheme.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/NPCs/TrainingDummy.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/Abilities/VolleyBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Abilities/QuickTimeAtkBase.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/Abilities/InstaEffectBase.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/Components/Characters/Selector/Selector.tscn" type="PackedScene" id=9]
[ext_resource path="res://Prefabs/Subscriber.tscn" type="PackedScene" id=10]
[ext_resource path="res://Prefabs/Components/Characters/EffectManager.gd" type="Script" id=11]
[ext_resource path="res://Prefabs/HealthManager.gd" type="Script" id=12]
[ext_resource path="res://Prefabs/Components/Characters/AnimationManager.gd" type="Script" id=13]
[ext_resource path="res://Prefabs/NPCs/DummyMovement.gd" type="Script" id=14]
[ext_resource path="res://Prefabs/NPCs/DummyAttack.gd" type="Script" id=15]
[ext_resource path="res://Prefabs/Components/Characters/Selector/SubSelector.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Flash_Red"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 26.1725

[node name="TrainingDummy" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HealthManager" type="Node2D" parent="."]
script = ExtResource( 12 )
max_health = 100

[node name="PositionManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Subscriber" parent="PositionManager" instance=ExtResource( 10 )]

[node name="CursorManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="AnimationManager" type="Node2D" parent="."]
script = ExtResource( 13 )
hit_animation = "Flash_Red"

[node name="ControlScheme" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Selector" parent="." instance=ExtResource( 9 )]

[node name="Options" type="Node2D" parent="Selector"]

[node name="SubSelector2" parent="Selector/Options" instance=ExtResource( 16 )]
option_name = "Maple"

[node name="Options" type="Node2D" parent="Selector/Options/SubSelector2"]

[node name="InstaEffectBase" parent="Selector/Options/SubSelector2/Options" instance=ExtResource( 8 )]
option_name = "Sing"

[node name="QuickTimeAtkBase" parent="Selector/Options" instance=ExtResource( 7 )]
option_name = "Save"

[node name="InstaEffectBase" parent="Selector/Options" instance=ExtResource( 8 )]
option_name = "Melee"

[node name="VolleyBase" parent="Selector/Options" instance=ExtResource( 6 )]
option_name = "Fireball"

[node name="SubSelector" parent="Selector/Options" instance=ExtResource( 16 )]

[node name="Options" type="Node2D" parent="Selector/Options/SubSelector"]

[node name="VolleyBase" parent="Selector/Options/SubSelector/Options" instance=ExtResource( 6 )]
option_name = "Leech"

[node name="VolleyBase2" parent="Selector/Options/SubSelector/Options" instance=ExtResource( 6 )]
option_name = "FireBolt"

[node name="VolleyBase3" parent="Selector/Options/SubSelector/Options" instance=ExtResource( 6 )]
option_name = "Kobold"

[node name="EffectManager" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash_Red = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["characters"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Behavior" type="Node2D" parent="."]

[node name="DummyMovement" type="Node2D" parent="Behavior"]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Behavior/DummyMovement"]
wait_time = 0.6
autostart = true

[node name="DummyAttack" type="Node2D" parent="Behavior"]
script = ExtResource( 15 )

[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
[connection signal="timeout" from="Behavior/DummyMovement/Timer" to="Behavior/DummyMovement" method="_on_Timer_timeout"]
